improving swagger documentation
